# halostar

./: Cargo.toml  README.md
halo2_gadgets/benches/: poseidon.rs  primitives.rs  sha256.rs
halo2_gadgets/src/: ecc.rs  lib.rs  poseidon.rs  sha256.rs  sinsemilla.rs  utilities.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/ecc/chip/: add.rs  mul.rs  (+4 more)
halo2_gadgets/src/poseidon/: pow5.rs  primitives.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs  message.rs  primitives.rs
halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_proofs/benches/: arithmetic.rs  commit_zk.rs  dev_lookup.rs  fft.rs  hashtocurve.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  cost-model.rs  folding.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple-example.rs  two-chip.rs  vector-mul.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  lib.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: layouter.rs  value.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  metadata.rs  util.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  keygen.rs  lookup.rs  permutation.rs  prover.rs  shuffle.rs  vanishing.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  multiopen_test.rs  query.rs  strategy.rs
halo2_proofs/src/protostar/: README.md  accumulator.rs  keygen.rs  mod.rs  proving_key.rs
halo2_proofs/tests/: plonk_api.rs
protostar/: Cargo.toml  README.md
protostar/src/: keygen.rs  lib.rs
(+67 files in other folders)
