[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""protostar implementation integrated with halo2"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="protostar"
repository ="https://github.com/thor314/protostar"
version    ="0.1.0"

[dependencies]
# ff = "0.13"
# group = "0.13"
# halo2curves = { version = "0.1.0" }
# rand_core = { version = "0.6", default-features = false }
halo2_proofs={ path="../halo2_proofs" }
itertools   ={ version="0.11.0" }
# rayon = "1.5.1"
